add completed up to battle

--- a/sinatra/Gemfile
+++ b/sinatra/Gemfile
@@ -6,6 +6,14 @@ git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 
 # gem "rails"
 
+group :development, :test do
+
 gem 'sinatra'
 
 gem 'webrick'
+
+gem 'capybara'
+
+gem 'selenium-webdriver'
+
+end
